# ECE382N-10-Lab2

./: CMakeLists.txt  README.md
doc/: doc.docx
sim/: Makefile  cache.cpp  cache.h  helpers.cpp  helpers.h  iu.cpp  iu.h  main.cpp  my_fifo.h  network.cpp  network.h  proc.cpp  proc.h  proc_submission.cpp  run.sh  test.cpp  test.h  test_submission.cpp  test_submission.h  types.h
submit/Lab2_Ding_Lei/: readme.md
submit/Lab2_Ding_Lei/sim/: Makefile  cache.cpp  cache.h  generic_error.h  helpers.h  iu.cpp  iu.h  main.cpp  network.cpp  network.h  proc.cpp  proc_uarch.cpp  runme.sh  runme_uarch.sh  test.cpp  test.h  test_uarch.cpp  types.h
submit/Lab2_Ding_Lei/sim/scripts/: random2trace.py  runme.sh  runme_uarch.sh
